# desktop-train-app-simulation

./: .gitignore  .gitignore_webengine  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_WEBENGINE.md  SIMPLE_GUIDE.md  START_HERE.md  UPDATED_WORKFLOW.md  build.sh  package-lock.json  package.json  qt next js guide.md  start-dev.sh  start-prod.sh
backend/: CMakeLists.txt  main.cpp
backend/auth/: auth.qrc  auth_data.h  auth_manager.cpp  auth_manager.h  user_manager.cpp  user_manager.h
backend/controllers/data/: electrical_data_handler.cpp  electrical_data_handler.h  running_data_handler.cpp  running_data_handler.h  track_data_handler.cpp  track_data_handler.h  train_data_handler.cpp  train_data_handler.h
backend/controllers/output/: csv_output_handler.cpp  csv_output_handler.h
backend/core/: appcontext.cpp  appcontext.h
backend/http_server/: api_handler.cpp  api_handler.h  http_server.cpp  http_server.h
backend/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
backend/models/: constant_data.h  efficiency_data.h  energy_data.h  load_data.h  mass_data.h  moving_data.h  power_data.h  resistance_data.h  simulation_data.h  station_data.h  train_data.h  train_motor_data.h
backend/resources/: icon_paths.h  icons.qrc  input_type.h
backend/scripts/: build-release.sh  smart-run.sh
backend/styles/: colors.h  text_style.h
backend/webengine/: webengine_window.cpp  webengine_window.h
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/electrical-parameter/: form.constants.ts  page.tsx
frontend/src/app/output/: page.tsx
frontend/src/app/running-parameter/: form.constants.ts  page.tsx
frontend/src/app/track-parameter/: form.constants.ts  page.tsx
frontend/src/app/train-parameter/: form.constant.ts  page.tsx
frontend/src/components/: app-sidebar.tsx  page-layout.tsx
frontend/src/components/buttons/: save-button.tsx
frontend/src/components/charts/: basic-chart.tsx  example-table.tsx
frontend/src/components/inputs/: input-dropdown.tsx  input-field.tsx  input-upload.tsx  input-widget.tsx
frontend/src/components/sidebar/: app-sidebar.tsx
frontend/src/services/: api.ts
frontend/src/types/: input-types.ts
frontend/src/utils/: debug.ts
